<resources>
    <!-- String keys -->
    <string name="key_music_volume">music_volume_key</string>

    <!-- Content strings -->
    <string name="app_name">Atomic Towers</string>
    <string name="game_state_service_description">Saves current paused Atomic Towers game state</string>
    <string name="start">Start</string>
    <string name="towers">Towers</string>
    <string name="energy_sidebar_indicator"><b>Energy:</b> \u00A0 %1$d J</string>
    <string name="pause">Pause</string>
    <string name="electron_shooter">Electron Shooter</string>
    <string name="resume">Resume</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="instructions">Instructions</string>
    <string name="back">Back</string>
    <string name="music_volume">Music Volume</string>
    <string name="about">About</string>
    <string name="credits">Credits</string>
    <string name="credits_content_text"><p><a href="http://dig.ccmixter.org/files/gurdonark/61313">Memories of Better Times</a> by gurdonark © copyright 2020 Licensed under a Creative Commons <a href="http://creativecommons.org/licenses/by-nc/3.0/">Attribution Noncommercial (3.0)</a> license. Ft: Essesq</p></string>
    <string name="resume_last_game_prompt">Resume last game?</string>
    <string name="new_game">New Game</string>
    <string name="game_won_message">Victory!</string>
    <string name="game_lost_message">Game Over</string>
    <string name="not_enough_energy">Not Enough Energy</string>
    <string name="energy_in_joules">%1$d J</string>
    <string name="photonic_laser">Photonic Laser</string>
    <string name="water">Water</string>
    <string name="instructions_content">Your mission is to protect the home base from those pesky atoms. You have at your limited disposal two types of towers, each of a different cost and capabilities.\n\nAtoms have different speeds and strengths depending on their atomic number, which you may notice by the chemical symbol on them. The towers strip the atoms from their protons, so you have to place the towers on the game screen strategically in order to destroy them.\n\nBe careful! Once an atom gets to the home base, it will decrease the base\'s health. When the health gets to zero, the game is lost. You win the game if you have succeeded destroying most atoms, without losing all of your health.\n\nYou may also notice the Energy indicator on the side panel - when an atom looses a proton, and when it gets fully destroyed, you get one energy point, measured in the energy unit Joule (J). You may use these energy points to buy towers for placement on the screen in order to win the game.\n\nHope you\'ll have fun, and good luck!
    </string>
</resources>
